# gary-zero

./: .browserslistrc  .bundlesizerc.json  .clinerules  .coverage  .dockerignore  .env.example  .eslintrc.override.js  .gitignore  .lintstagedrc  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .railway-ignore  .secrets.baseline  .stylelintrc.json  .unimportedrc.json  .windsurfrules  .yarnrc.yml  =0.3.0  =2.11.0  A2A_IMPLEMENTATION_SUMMARY.md  ALPINE_FIXES_VALIDATION.md  ALPINE_MIGRATION.md  AUTOMATED_REPORTING.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CLI_INTEGRATION_SUMMARY.md  COMMIT_SUMMARY.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  CREDENTIALS_MANAGEMENT.md  DEPLOYMENT.md  DEPRECATION_STRATEGY.md  DEVELOPER_DOCUMENTATION_MODEL_CATALOG.md  DOCKER_ENV_SETUP.md  DOCKER_HUB_SETUP_NOTES.md  Dockerfile  (+194 more)
.agent-os/: README.md
.githooks/: pre-commit
.github/: FUNDING.yml  copilot-rules.md
.husky/: pre-commit  sync-requirements
.warp/: ai_rules.md  commands.yaml
api/: __init__.py  error_report.py  gemini_live_api.py
benchmark_results/: summarize_research_paper_default_1753196930.json  summary_report_1753196930.json
cleanup_archive/: CLAUDE.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT.md  DOCKER_ENV_SETUP.md  DOCKER_HUB_SETUP_NOTES.md  MODEL_MODERNIZATION_AUDIT_REPORT.md  PRODUCTION_DEPLOYMENT.md  RAILPACK_VALIDATION_SUMMARY.md  RAILWAY_405_FIX_DOCUMENTATION.md  RAILWAY_405_FIX_SUMMARY.md  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_HARDENING.md  RAILWAY_DEPLOYMENT_TIMEOUT_FIX.md  RAILWAY_FIX_DOCUMENTATION.md  RAILWAY_HEALTH_CHECK_FIX.md  SEARCHXNG_FIX_SUMMARY.md  SSH_FALLBACK_FIX.md  SYSTEM_ARCHITECTURE_INTEGRATION.md  SYSTEM_IMPROVEMENTS_CHECKLIST.md  TASK_COMPLETION_SUMMARY.md  UNIFIED_FRAMEWORK_DOCS.md
cline_docs/: OpenAI-models.md  gemini-model-list.md  projectRules.md
demos_root/: demo_cli_integration_step6.py  demo_gemini_live.py  demo_secret_store_integration.py
docs/: AGENT_OS_SPECS_ANNOUNCEMENT.md  AI_ACTION_VISUALIZATION.md  AUTOMATED_REPORTING.md  CHANGELOG.md  CLOUD_ENVIRONMENT.md  CONTRIBUTING.md  CREDENTIALS_MANAGEMENT.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_UNIFIED.md  DEPRECATION_STRATEGY.md  DEVELOPER_DOCUMENTATION_MODEL_CATALOG.md  DEVELOPMENT_ROADMAP.md  DISCORD_ANNOUNCEMENT.md  DOCKER_ENV_SETUP.md  DOCUMENTATION_AUDIT.md  GIT_WORKFLOW.md  KALI_INTEGRATION.md  LINTING.md  MODEL_MODERNIZATION_AUDIT_REPORT.md  MONITORING_SETUP.md  MULTI_AGENT_WORKFLOWS.md  PHASE_5_AI_MANAGEMENT.md  PLUGIN_DEVELOPMENT_GUIDE.md  PRODUCTION_DEPLOYMENT.md  PROGRESS_TRACKING_SYSTEM.md  RAILPACK_MIGRATION.md  RAILPACK_VALIDATION_SUMMARY.md  RAILWAY_405_FIX_DOCUMENTATION.md  RAILWAY_405_FIX_SUMMARY.md  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_CONSOLIDATED.md  RAILWAY_DEPLOYMENT_HARDENING.md  RAILWAY_DEPLOYMENT_PLAYBOOK.md  RAILWAY_DEPLOYMENT_TIMEOUT_FIX.md  RAILWAY_HEALTH_CHECK_FIX.md  README.md  ROUTE_CHECK_DOCUMENTATION.md  SDK_INTEGRATION.md  SEARCHXNG_INTEGRATION.md  (+44 more)
examples/: comprehensive_demo.py  demo_hierarchical_planning.py  mcp_server_example.ts  memory_graph_demo.py  memory_graph_integration.py  observability_demo.py  orchestration_integration.py  performance_demo.py  plugin_system_demo.py  session_workflows.py
framework/: __init__.py  component_examples.py  component_integration_demo.py  modular_component_system.py
gary_zero.egg-info/: PKG-INFO  entry_points.txt  requires.txt  top_level.txt
instruments/: __init__.py
models/: __init__.py  registry.py
reports/: eslint-report-2025-06-25T05-21-31-472Z.json  eslint-report-2025-06-27T00-46-16-622Z.json  security-audit-2025-06-25T05-20-28-478Z.json  security-audit-2025-06-27T00-46-16-622Z.json  summary-2025-06-25T05-20-28-478Z.json  summary-2025-06-25T05-21-31-472Z.json  summary-2025-06-27T00-46-16-622Z.json
scripts/: agent_os_check.sh  build.sh  build_monitor.py  dependency-check.py  dev-server.sh  fix-console-statements.cjs  git-status-check.sh  health-check.py  health-check.sh  health_check.sh  init_volumes.py  log_monitor_24h.py  markdown-helper.sh  migrate_settings.py  migrate_to_volumes.py  phase1-audit.sh  postinstall.js  quality-improvements.sh  regenerate_requirements.py  route-check.py  run_unit_tests.sh  smoke_tests.py  start.sh  start_monitoring.sh  test-compatibility-fixes.js  test_searchxng.py  validate-git-workflow.sh  validate_deployment_standardization.py  validate_env_standardization.py  validate_framework.py  validate_integrations.py  verify_basic_auth_security.py  verify_railway_config.py
secrets/: store.encrypted
security/: __init__.py  validator.py
shared_mcp/: EXAMPLES.md  MIGRATION.md  README.md  __init__.py  pyproject.toml
shared_mcp/client/: __init__.py
shared_mcp/protocols/: __init__.py
shared_mcp/server/: __init__.py
shared_mcp/shared_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
shared_mcp/tests/: __init__.py  test_backward_compatibility.py  test_shared_mcp.py
shared_mcp/tools/: __init__.py
shared_mcp/types/: __init__.py
specs/: cloud_services_integration_overview.md  computer_use_service_spec.md  e2b_service_spec.md  kali_service_spec.md  morphism_service_spec.md  performance_optimization_observability_spec.md  postgresql_prisma_service_spec.md  redis_service_spec.md  security_compliance_requirements.md
test_benchmark_results/: summarize_research_paper_test_config_1753196487.json
test_env/: pyvenv.cfg
tests/: alpine-integration-fixes-complete.test.js  alpine-registration.test.js  alpine-sendmessage-fix.test.js  alpine-settings-binding-fix.test.js  component-loading.test.js  conftest.py  dom-fixes.test.js  error-boundary.test.js  infrastructure.test.js  promise-rejection-handling.test.js  setup.js  test_anthropic_computer_use.py  test_async_orchestration.py  test_auth_rate_limiter.py  test_basic_framework.py  test_claude_code.py  test_container.py  test_dynamic_prompt_loader.py  test_environment.py  test_health_check.py  test_integration.py  test_model_modernization.py  test_npm_availability.py  test_sanitize_model_catalog.py  test_settings_integration.py
tests_root/: test_db_connection.py  (+21 more)
(+734 files in other folders)
